# Evolvium

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_integration.py
evolution/: genetic_algorithm.py  myfunctions.py
evolution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
evolvium/: __init__.py  genetic_algorithm.py
evolvium.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evolvium/algorithms/: __init__.py
evolvium/algorithms/genetic/: __init__.py  algorithm.py  base.py  individual.py  operators.py
evolvium/exemples/: exemplos.ipynb
evolvium/utils/: cache.py
tests/: exemplos.ipynb  jupyter.ipynb
